kubernetes/apps/default/emqx/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-validation-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  # annotations:
  #   gethomepage.dev/enabled: "true"
  #   gethomepage.dev/icon: n8n.png
  #   gethomepage.dev/name: N8N
  #   gethomepage.dev/group: Автоматизация
  #   gethomepage.dev/description: Автоматизация рабочих процессов
spec:
  hostnames: ["emqx.astrateam.net"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: emqx-dashboard
          namespace: default
          port: 18083
